--- a/style.css
+++ b/style.css
@@ -5,13 +5,16 @@
 .card-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1rem;
+    align-items: flex-start;
 }
 
 .card {
+    --padding: 1rem;
     background: white;
-    padding: 1rem;
     border: 1px solid #777;
     border-radius: .25rem;
+    overflow: hidden;
 }
 
 .card.card-shadow {
@@ -21,15 +24,39 @@
 
 .card-header {
     font-size: 1.5rem;
+    padding: var(--padding);
     margin-bottom: .5rem;
+    padding-bottom: 0;
+}
+
+.card-header.card-image {
+    padding: 0;
+    overflow: hidden;
+}
+
+.card-header.card-image > img {
+    display: block;
+    width: 100%;
+    max-height: 300px;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+    object-position: center;
+    transition: 200ms transform ease-in-out;
+}
+
+.card:hover > .card-header.card-image > img {
+    transform: scale(1.025);
 }
 
 .card-body{
     font-size: .9rem;
+    padding: 0 var(--padding);
 }
 
 .card-footer {
     margin-top: 1rem;
+    padding: var(--padding);
+    padding-top: 0;
 }
 
 .btn {
